# AMBER

./: .env.example  .gitignore  AMBER.sln  Cargo.toml  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/web/: Dockerfile  index.html  package.json
apps/web/src/: App.jsx  api.js  styles.css
chaos/: README.md
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
docker-min/: docker-compose.yml
docs/: 01_portee.md  02_proposition_valeur.md  03_architecture.md  04_sdk.md  05_grouping.md  06_rca.md  07_ui.md  08_mvp.md  09_echecs.md  10_plan.md  11_db.md  12_api.md  13_sdk_node.md  14_migrations.md  15_sdk_python.md  16_ui.md  17_sourcemaps.md  18_alerts.md  19_rate_limit.md  20_spa.md  21_integrations.md  22_sdk_frameworks.md  23_admin_cli.md  24_releases.md  25_search.md  26_tracing.md  27_tracing_regressions.md  28_profiling.md  29_replay.md  30_sampling.md  31_storage_tiering.md  32_marketplace.md  33_webhooks.md  34_multi_region.md  35_compliance.md  36_scim.md  37_mobile_sdk.md  38_sla_slo.md  39_chaos.md  40_reprocessing.md  (+14 more)
schemas/: clickhouse.sql  event.schema.json  event.schema.v1.json  postgres.sql
scripts/: check-cargo.js  start.cmd  start.ps1  start.sh
scripts/packaging/: package.ps1  package.sh
scripts/self_hosted/: install.ps1  install.sh  upgrade.ps1  upgrade.sh
sdk/android/: EmberClient.kt  README.md
sdk/dotnet/: README.md
sdk/dotnet/Ember.Sdk/: Ember.Sdk.csproj  EmberClient.cs  EmberMiddleware.cs  EmberMiddlewareExtensions.cs
sdk/go/: README.md  ember.go  go.mod
sdk/ios/: EmberClient.swift  README.md
sdk/java/: README.md  pom.xml
sdk/java/src/main/java/ember/: EmberClient.java  EmberFilter.java
sdk/node/: README.md  express.js  index.js  package.json
sdk/python/: README.md  __init__.py  django.py  ember_sdk.py  fastapi.py  flask.py  pyproject.toml
services/admin-cli/: Cargo.toml
services/admin-cli/src/: main.rs
services/api/: Cargo.toml  Dockerfile
services/api/src/: main.rs
services/api/static/: app.js  index.html  styles.css
services/api/tests/: invariants.rs  migrations.rs
services/ingest/: Cargo.toml  Dockerfile
services/ingest/src/: main.rs
services/launcher/: Cargo.toml
services/launcher/src/: main.rs
services/migrations/: 0001_init.sql  0002_add_assignee.sql  0003_sourcemaps.sql  0004_alerts_releases.sql  0005_integrations.sql  0006_user_stats.sql  0007_auth_audit_jobs.sql  0008_phase1_rules_releases.sql  0009_phase2_perf_profiling.sql  0010_phase3_replay_rca.sql  0011_phase4_enterprise.sql  0012_auth_rbac.sql  0013_discover_saved_queries.sql  0014_ownership_rules.sql  0015_sso_hardening.sql  0016_replay_links.sql  0017_data_requests.sql  0018_regions.sql  0019_oauth_integrations.sql  0020_security_audit_hardening.sql  0021_rate_limit_quotas.sql  0022_jobs_backpressure_dlq.sql  0023_grouping_overrides.sql  0024_alerts_advanced.sql  0025_releases_v2.sql  0026_full_text_search.sql  0027_tracing_ux_v2.sql  0028_tracing_top_regressions.sql  0029_profiling_v2.sql  0030_replay_ux_v2.sql  0031_sampling_rules.sql  0032_storage_tiering.sql  0033_marketplace_catalog.sql  0034_webhooks_v2.sql  0035_compliance.sql  0036_scim.sql  0037_sla_slo_dashboards.sql  0038_rca_assistant.sql  0039_analysis_reprocess_and_audit.sql  0040_cost_model_and_schema_versioning.sql  (+3 more)
services/pipeline/: Cargo.toml
services/pipeline/src/: main.rs
services/relay/: Cargo.toml
services/relay/src/: main.rs
services/worker/: Cargo.toml  Dockerfile
services/worker/src/: main.rs
