[workspace]
members = [
    "services/ingest",
    "services/api",
    "services/worker",
    "services/relay",
    "services/pipeline",
    "services/admin-cli",
    "services/launcher",
    "crates/shared"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
sourcemap = "8.0"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
tower-http = { version = "0.5", features = ["fs"] }
dotenvy = "0.15"
rdkafka = { version = "0.36", features = ["cmake-build"] }
clickhouse = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.8"
jsonwebtoken = "9.3"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
data-encoding = "2.10"
hmac = "0.12"
ipnet = "2.11"
sha1 = "0.10"
aes-gcm = "0.10"
