[package]
name = "ember-admin"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
csv = { workspace = true }
dotenvy = { workspace = true }
