[package]
name = "ember-pipeline"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
rdkafka = { workspace = true }
clickhouse = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
