[package]
name = "ember-relay"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
rdkafka = { workspace = true }
chrono = { workspace = true }
