[package]
name = "ember-worker"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
lettre = { workspace = true }
dotenvy = { workspace = true }
rand = "0.8"
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
